// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter should render 1`] = `
<button
  className="navbar-right btn btn-link"
  disabled={false}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button"
>
  <svg
    aria-hidden="true"
    className="tc-svg-icon"
    focusable="false"
    title={null}
  >
    <use
      xlinkHref="#talend-search"
    />
  </svg>
</button>
`;

exports[`Filter should render filter input with default placeholder 1`] = `
<form
  className="navbar-form navbar-right"
  onSubmit={[Function]}
  role="search"
>
  <svg
    aria-hidden="true"
    className="tc-svg-icon"
    focusable="false"
    title={null}
  >
    <use
      xlinkHref="#talend-search"
    />
  </svg>
  <div
    className="form-group"
  >
    <input
      aria-label="Filter"
      autoFocus={true}
      className="form-control"
      id={undefined}
      name="search"
      onBlur={undefined}
      onChange={[Function]}
      onFocus={undefined}
      onKeyDown={[Function]}
      placeholder="Filter"
      type="search"
      value={undefined}
    />
    <button
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role={null}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-cross"
        />
      </svg>
    </button>
  </div>
</form>
`;

exports[`Filter should render filter input with given placeholder 1`] = `
<form
  className="navbar-form navbar-right"
  onSubmit={[Function]}
  role="search"
>
  <svg
    aria-hidden="true"
    className="tc-svg-icon"
    focusable="false"
    title={null}
  >
    <use
      xlinkHref="#talend-search"
    />
  </svg>
  <div
    className="form-group"
  >
    <input
      aria-label="Filter"
      autoFocus={true}
      className="form-control"
      id={undefined}
      name="search"
      onBlur={undefined}
      onChange={[Function]}
      onFocus={undefined}
      onKeyDown={[Function]}
      placeholder="find something"
      type="search"
      value={undefined}
    />
    <button
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role={null}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-cross"
        />
      </svg>
    </button>
  </div>
</form>
`;

exports[`Filter should render highlighted filter 1`] = `
<button
  className="navbar-right btn btn-link"
  disabled={false}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button"
>
  <svg
    aria-hidden="true"
    className="tc-svg-icon"
    focusable="false"
    title={null}
  >
    <use
      xlinkHref="#talend-search"
    />
  </svg>
</button>
`;

exports[`Filter should render id if provided 1`] = `
<button
  className="navbar-right btn btn-link"
  disabled={false}
  id="toolbar-filter"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button"
>
  <svg
    aria-hidden="true"
    className="tc-svg-icon"
    focusable="false"
    title={null}
  >
    <use
      xlinkHref="#talend-search"
    />
  </svg>
</button>
`;

exports[`Filter should render only toggle icon 1`] = `
<button
  className="navbar-right btn btn-link"
  disabled={false}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button"
>
  <svg
    aria-hidden="true"
    className="tc-svg-icon"
    focusable="false"
    title={null}
  >
    <use
      xlinkHref="#talend-search"
    />
  </svg>
</button>
`;
